# istgt

./: .gitignore  COPYING  COPYRIGHT  ChangeLog.jp  Makefile.in  README  configure  configure.in
doc/: .gitignore  Makefile.in  istgtcontrol.1.in
etc/: Makefile.in  auth.conf  istgt.conf.elasto  istgt.conf.in  istgt.service.in  istgt.sh.in  istgt_linux.sh.in
src/: .gitignore  Makefile.in  config.h.in  istgt.c  istgt.h  istgt_conf.c  istgt_conf.h  istgt_crc32c.c  istgt_crc32c.h  istgt_iscsi.c  istgt_iscsi.h  istgt_log.c  istgt_log.h  istgt_lu.c  istgt_lu.h  istgt_lu_ctl.c  istgt_lu_disk.c  istgt_lu_disk_elasto.c  istgt_lu_dvd.c  istgt_lu_pass.c  istgt_lu_tape.c  istgt_md5.c  istgt_md5.h  istgt_misc.c  istgt_misc.h  istgt_proto.h  istgt_queue.c  istgt_queue.h  istgt_sock.c  istgt_sock.h  istgt_ver.h  istgtcontrol.c  md5.c  md5.h
